--- a/cloud/eureka/pom.xml
+++ b/cloud/eureka/pom.xml
@@ -22,6 +22,32 @@
 	  		<groupId>org.springframework.cloud</groupId>
 	  		<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 	  	</dependency>
+	  	
+	  	<dependency>
+	  		<groupId>org.springframework.cloud</groupId>
+	  		<artifactId>spring-cloud-starter-hystrix</artifactId>
+	  	</dependency>
 	</dependencies>
-  	
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
+	</build>  	
 </project>
