--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -28,5 +28,9 @@
   
 	<modules>
 		<module>eureka</module>
+		<module>config</module>
+		<module>srv1</module>
+		<module>srv2</module>
+		<module>zuul</module>
 	</modules>
 </project>
