--- a/cloud/srv1/src/main/resources/application-sit.yml
+++ b/cloud/srv1/src/main/resources/application-sit.yml
@@ -5,7 +5,7 @@ spring:
   cloud:
     config:
       uri: http://config:80/
-      profile: dev
+      profile: sit
       discovery:
         service-id: config
     inetutils:
