--- a/cloud/srv2/src/main/resources/application-sit.yml
+++ b/cloud/srv2/src/main/resources/application-sit.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     config:
       uri: http://config:80/
-      profile: dev
+      profile: sit
       discovery:
         service-id: config
     inetutils:
