--- a/cloud/eureka/src/main/resources/application-dev.yml
+++ b/cloud/eureka/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ eureka:
   server:
     renewalPercentThreshold: 0.49
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    register-With-Eureka: false
+    fetch-Registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
