--- a/cloud/gateway/src/main/resources/application-dev.yml
+++ b/cloud/gateway/src/main/resources/application-dev.yml
@@ -1,22 +1,17 @@
-server:
-  port: 80
-
 spring:
   cloud:
     config:
-      uri: http://config/
-      profile: sit
+      uri: http://localhost:8001/
+      profile: dev
       discovery:
         service-id: config
-    inetutils:
-      preferred-networks:
-        - 10.1
 eureka:
   instance:
-    hostname: eureka
+    hostname: localhost
     port: 8000
-    preferIpAddress: true
   client:
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+      
 
+          
