--- a/cloud/srv2/src/main/resources/application-sit.yml
+++ b/cloud/srv2/src/main/resources/application-sit.yml
@@ -6,7 +6,7 @@ spring:
     name: srv2
   cloud:
     config:
-      uri: http://config/
+      uri: http://config:80/
       profile: sit
       discovery:
         service-id: config
