--- a/cloud/gateway/src/main/resources/bootstrap-sit.yml
+++ b/cloud/gateway/src/main/resources/bootstrap-sit.yml
@@ -4,9 +4,9 @@ server:
 spring:
   cloud:
     config:
-      uri: http://config:80/
       profile: sit
       discovery:
+        enable: true
         service-id: config
     inetutils:
       preferred-networks:
